--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Painbrush</title>
+    <title>Paintbrush</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+      <canvas id="jsCanvas" class="canvas"></canvas>
+      <section class="controls">
+        <div class="control__btns" id="jsBtns">
+          <button class="control__btn" id="jsMode">Fill</button
+          ><button class="control__btn" id="jsSave">Save</button>
+        </div>
+        <div class="control__thickness">
+          <input
+            id="jsRange"
+            type="range"
+            min="0.1"
+            max="5.0"
+            value="2.5"
+            step="0.1"
+          />
+        </div>
+        <div class="control__colors" id="jsColors">
+          <div
+            class="control__color color--border"
+            style="background-color: black"
+          ></div>
+          <div class="control__color" style="background-color: white"></div>
+          <div class="control__color" style="background-color: tomato"></div>
+          <div class="control__color" style="background-color: orange"></div>
+          <div
+            class="control__color"
+            style="background-color: greenyellow"
+          ></div>
+          <div class="control__color" style="background-color: olivedrab"></div>
+          <div class="control__color" style="background-color: skyblue"></div>
+          <div class="control__color" style="background-color: hotpink"></div>
+          <div class="control__color" style="background-color: purple"></div>
+        </div>
+      </section>
+    </main>
+
     <script src="app.js"></script>
   </body>
 </html>
