--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <div class="control__color" style="background-color: white"></div>
           <div class="control__color" style="background-color: tomato"></div>
           <div class="control__color" style="background-color: orange"></div>
+          <div class="control__color" style="background-color: yellow"></div>
           <div
             class="control__color"
             style="background-color: greenyellow"
